fixed height of workshop button on mobile

--- a/src/scss/pages/_workshop.scss
+++ b/src/scss/pages/_workshop.scss
@@ -205,6 +205,9 @@
                 @media screen and (min-width: 651px) {
                     min-width: 125px;
                 }
+                @media screen and (max-width: 550px) {
+                    height: auto;
+                }
             }
             .workshop-date {
                 font-size: 14px;
